--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,9 @@
     position: fixed;
     top: 50px;
     left: 5%;
-    height: auto;
+    height: 80%;
     min-height: 100px;
+    overflow: scroll;
 }
 
 #shaph-fieldset {
@@ -30,8 +31,8 @@
 
 #shaph-cancel {
     position: absolute;
-    top: -5px;
-    right: -5px;
+    top: 5px;
+    right: 5px;
 }
 
 #shaph-filelist {
@@ -47,4 +48,26 @@
 
 #shaph-filelist li b {
     color: green;
+}
+
+.shaph-uploaded-image {
+    padding: 10px 20px;
+    border-bottom: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.shaph-uploaded-image img {
+    width: 15%;
+    height: auto;
+    border: 1px solid;
+}
+
+.shaph-image-attributes {
+    width: 81%;
+}
+
+.shaph-image-attributes label {
+    display: block;
 }
