--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 #shaph-bg.open {
     display: block;
     position: fixed;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
     z-index: 1000;
@@ -13,20 +13,46 @@
     left: 0px;
 }
 
-#shaph-form  {
-    background-color: white;
+#shaph-modal  {
+    background-color: #3887bf;
+    border: 1px solid #3698bf;
+    border-radius: 4px;
     width: 90%;
     position: fixed;
     top: 50px;
     left: 5%;
     height: 80%;
     min-height: 100px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 
-#shaph-fieldset {
+#shaph-page {
     border: none;
     outline: none;
     padding: 10px;
+}
+
+
+.shaph-title {
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
+#shaph-browse {
+    display: block;
+    margin: 0 auto;
+    background: #95d4ff;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    color: #2a658f;
+    font-family: 'Open Sans', sans-serif;
+    padding: 20px;
+    font-size: 24px;
 }
 
 #shaph-cancel {
@@ -34,24 +60,12 @@
     top: 0px;
     right: 0px;
     border: none;
-    border-radius: 0;
-    color: white;
-    background-color: red;
-}
-
-#shaph-filelist {
-    list-style: none;
-    padding: 0;
-    margin: 0 0 20px 0;
-}
-
-#shaph-filelist li {
-    border-bottom: 1px solid;
-    padding: 10px 0;
-}
-
-#shaph-filelist li b {
-    color: green;
+    color: #95d4ff;
+    background: none;
+    box-shadow: none;
+    outline: none;
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
 }
 
 .shaph-uploaded-image {
