--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,37 @@
-#shaph-bg {
+#shaph {
     display: none;
 }
 
-#shaph-bg.open {
+#shaph.open {
     display: block;
+    z-index: 1000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#shaph-bg {
     position: fixed;
     background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
-    z-index: 1000;
-    top: 0px;
-    left: 0px;
+    z-index: 1;
+    top: 0;
+    left: 0;
 }
 
 #shaph-modal  {
+    position: relative;
+    z-index: 2;
     background-color: #3887bf;
     border: 1px solid #3698bf;
     border-radius: 4px;
     width: 90%;
-    position: fixed;
-    top: 50px;
-    left: 5%;
-    height: 80%;
-    min-height: 100px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    margin: 100px auto;
+    min-height: 300px;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
 }
 
 #shaph-page {
