--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@
     text-align: center;
     text-transform: uppercase;
     font-size: 24px;
-    margin: 30px 0;
+    margin: 40px 0;
 }
 
 @media (min-width: 750px) {
@@ -62,6 +62,11 @@
     padding: 20px;
     font-size: 24px;
     text-shadow: none;
+    cursor: pointer;
+}
+
+#shaph-browse:hover {
+    color: white;
 }
 
 #shaph-cancel {
@@ -76,6 +81,12 @@
     font-family: "Open Sans", sans-serif;
     font-size: 14px;
     text-shadow: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+#shaph-cancel:hover {
+    color: white;
 }
 
 @media (min-width: 750px) {
@@ -102,9 +113,10 @@
 
 #shaph-page .text-input {
     background-color: #286592;
-    padding: 5px;
-    width: 100%;
+    padding: 10px;
+    width: 90%;
     font-family: "Open Sans", sans-serif;
+    font-size: 14px;
     color: white;
     border: none;
     outline: none;
@@ -112,12 +124,13 @@
 }
 
 #shaph-image-editor {
-    margin-bottom: 80px;
+    margin-bottom: 110px;
     padding: 0 20px;
 }
 
 #shaph-image-preview {
-    width: 100%
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 #shaph-image-preview img {
@@ -141,7 +154,8 @@
     }
 
     #shaph-image-preview {
-        width: 20%
+        width: 20%;
+        margin-bottom: 0;
     }
 }
 
