--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,12 @@
     z-index: 2;
     background-color: #3887bf;
     border: 1px solid #3698bf;
+    -webkit-border-radius: 4px;
     border-radius: 4px;
     width: 90%;
     margin: 100px auto;
     min-height: 300px;
+    -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.75);
 }
 
@@ -54,6 +56,7 @@
     display: block;
     margin: 0 auto;
     background: #95d4ff;
+    -webkit-box-shadow: none;
     box-shadow: none;
     border: none;
     outline: none;
@@ -63,7 +66,9 @@
     font-size: 24px;
     text-shadow: none;
     cursor: pointer;
+    -webkit-border-radius: 8px;
     border-radius: 8px;
+    -webkit-appearance: none;
 }
 
 #shaph-browse:hover {
@@ -77,6 +82,7 @@
     border: none;
     color: #95d4ff;
     background: none;
+    -webkit-box-shadow: none;
     box-shadow: none;
     outline: none;
     font-family: "Open Sans", sans-serif;
@@ -84,6 +90,7 @@
     text-shadow: none;
     padding: 10px 20px;
     cursor: pointer;
+    -webkit-appearance: none;
 }
 
 #shaph-cancel:hover {
@@ -163,15 +170,18 @@
     width: 100%;
     padding: 20px 0;
     background-color: #EEE;
+    -webkit-border-radius: none;
     border-radius: 0 0 4px 4px;
     position: absolute;
     bottom: 0;
     left: 0;
+    -webkit-appearance: none;
 }
 
 #shaph-footer-buttons input {
     margin-left: 10px;
     background: #3887bf;
+    -webkit-box-shadow: none;
     box-shadow: none;
     border: none;
     outline: none;
@@ -181,7 +191,9 @@
     font-size: 16px;
     text-shadow: none;
     cursor: pointer;
+    -webkit-border-radius: 4px;
     border-radius: 4px;
+    -webkit-appearance: none;
 }
 
 #shaph-footer-buttons input:hover {
